--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
-#gameContainer{
-    text-align: center;
+
+#gameContainer {
+  text-align: center;
 }
-#gameBoard{
-    border: 3px solid black;
+#gameBoard {
+  border: 3px solid black;
+  border-radius: 15px;
+
 }
-#scoreText{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, cursive;
-    font-size: 100px;
+#scoreText {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif,
+    cursive;
+  font-size: 100px;
 }
-#resetBtn{
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, cursive;
-   font-size: 22px;
-   width: 100px;
-   height: 50px;
-   border: 4px solid black;
-   border-radius: 15px;
-   cursor: pointer;
+#resetBtn {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif,
+    cursive;
+  font-size: 22px;
+  width: 100px;
+  height: 50px;
+  border: 4px solid black;
+  border-radius: 15px;
+  cursor: pointer;
 }
